--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "@microsoft/teamsfx": "^2.2.0",
         "@microsoft/teamsfx-react": "^3.0.0",
         "axios": "^0.21.1",
+        "chart.js": "^4.3.0",
         "react": "^18.2.0",
+        "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.8.0",
         "react-scripts": "^5.0.1"
