--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
         "@microsoft/teamsfx-react": "^3.0.0",
         "axios": "^0.21.1",
         "chart.js": "^4.3.0",
+        "jquery": "^3.7.0",
         "react": "^18.2.0",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.8.0",
-        "react-scripts": "^5.0.1"
+        "react-scripts": "^5.0.1",
+        "scss": "^0.2.4"
     },
     "devDependencies": {
+        "@types/jquery": "^3.5.16",
         "@types/node": "^14.0.0",
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
