--- a/package.json
+++ b/package.json
@@ -1,62 +1,68 @@
 {
-    "name": "gauge-frontend-test",
-    "version": "0.1.0",
-    "engines": {
-        "node": "16 || 18"
-    },
-    "private": true,
-    "dependencies": {
-        "@fluentui/react-components": "^9.18.0",
-        "@microsoft/mgt-element": "^2.8.0",
-        "@microsoft/mgt-react": "^2.8.0",
-        "@microsoft/mgt-teamsfx-provider": "^2.8.0",
-        "@microsoft/microsoft-graph-client": "^3.0.1",
-        "@microsoft/teams-js": "^2.7.1",
-        "@microsoft/teamsfx": "^2.2.0",
-        "@microsoft/teamsfx-react": "^3.0.0",
-        "axios": "^0.21.1",
-        "chart.js": "^4.3.0",
-        "jquery": "^3.7.0",
-        "react": "^18.2.0",
-        "react-chartjs-2": "^5.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.8.0",
-        "react-scripts": "^5.0.1",
-        "scss": "^0.2.4"
-    },
-    "devDependencies": {
-        "@types/jquery": "^3.5.16",
-        "@types/node": "^14.0.0",
-        "@types/react": "^18.0.0",
-        "@types/react-dom": "^18.0.0",
-        "@types/react-router-dom": "^5.3.3",
-        "env-cmd": "^10.1.0",
-        "typescript": "^4.1.2"
-    },
-    "scripts": {
-        "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run start",
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "eject": "react-scripts eject",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "homepage": "."
+  "name": "gauge-frontend-test",
+  "version": "0.1.0",
+  "engines": {
+    "node": "16 || 18"
+  },
+  "private": true,
+  "dependencies": {
+    "@fluentui/react-components": "^9.18.0",
+    "@microsoft/mgt-element": "^2.8.0",
+    "@microsoft/mgt-react": "^2.8.0",
+    "@microsoft/mgt-teamsfx-provider": "^2.8.0",
+    "@microsoft/microsoft-graph-client": "^3.0.1",
+    "@microsoft/teams-js": "^2.7.1",
+    "@microsoft/teamsfx": "^2.2.0",
+    "@microsoft/teamsfx-react": "^3.0.0",
+    "axios": "^0.21.1",
+    "chart.js": "^4.3.0",
+    "jquery": "^3.7.0",
+    "mssql": "^9.1.3",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
+    "react-scripts": "^5.0.1",
+    "scss": "^0.2.4"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.16",
+    "@types/node": "^14.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/react-router-dom": "^5.3.3",
+    "env-cmd": "^10.1.0",
+    "typescript": "^4.1.2"
+  },
+  "scripts": {
+    "dev:teamsfx": "env-cmd --silent -f .localConfigs npm run start",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "homepage": "http://.",
+  "description": "Personal tabs provide a great way to enhance the Microsoft Teams experience. Using personal tabs, you can provide a user access to their application right within Teams, without the user having to leave the experience or sign in again. Now, personal tabs can light up within other Microsoft 365 applications. You can build and run your personal tabs in Teams, both Outlook desktop and web experiences, and also the Microsoft 365 app on the web.",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
