--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,5 @@
   "include": [
     "src",
     "src/components/**/*.png"
-, "src/components/sample/Charts.tsx", "placeholder/images"  ]
+, "src/components/sample/Charts.tsx", "placeholder/images", "sqltest.js"  ]
 }
